[gd_scene load_steps=5 format=3 uid="uid://dqa6kk2vyqay"]

[ext_resource type="Script" path="res://actors/btch_server.gd" id="1_armag"]
[ext_resource type="Script" path="res://actors/btch_user.gd" id="2_1w108"]
[ext_resource type="Script" path="res://actors/opponent_player.gd" id="2_tahnv"]
[ext_resource type="Script" path="res://actors/btch_game.gd" id="3_kw7fr"]

[node name="BtchServer" type="Node2D"]
script = ExtResource("1_armag")

[node name="SeqRequests" type="HTTPRequest" parent="."]

[node name="@Timer@196353" type="Timer" parent="SeqRequests"]
one_shot = true

[node name="OpponentPlayer" type="Node" parent="."]
script = ExtResource("2_tahnv")

[node name="UserSeqRequests" type="HTTPRequest" parent="OpponentPlayer"]

[node name="_Timer_196354" type="Timer" parent="OpponentPlayer/UserSeqRequests"]
one_shot = true

[node name="Player" type="Node" parent="."]
script = ExtResource("2_1w108")

[node name="UserSeqRequests" type="HTTPRequest" parent="Player"]

[node name="@Timer@196354" type="Timer" parent="Player/UserSeqRequests"]
one_shot = true

[node name="BtchGame" type="Node" parent="."]
script = ExtResource("3_kw7fr")

[node name="HTTPRequest" type="HTTPRequest" parent="BtchGame"]

[node name="TurnTimer" type="Timer" parent="."]

[connection signal="timeout" from="TurnTimer" to="." method="_on_check_turn_timer_timeout"]
